# mc_kinova

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  gen3_7dof.urdf  gen3_7dof_mujoco.xml  vcpkg.json
.github/workflows/: build.yml
convex/kinova/: DS4_adapter-ch.txt  FT_adapter-ch.txt  FT_sensor_mounting-ch.txt  adapter-ch.txt  base_link-ch.txt  bracelet_link-ch.txt  bracelet_no_vision_link-ch.txt  bracelet_with_vision_link-ch.txt  forearm_link-ch.txt  gripper_base_link-ch.txt  half_arm_1_link-ch.txt  half_arm_2_link-ch.txt  left_finger-ch.txt  left_finger_dist_link-ch.txt  left_finger_prox_link-ch.txt  left_finger_tip-ch.txt  left_inner_knuckle-ch.txt  left_knuckle-ch.txt  right_finger-ch.txt  right_finger_dist_link-ch.txt  right_finger_prox_link-ch.txt  right_finger_tip-ch.txt  right_inner_knuckle-ch.txt  right_knuckle-ch.txt  robotiq_85_base_link-ch.txt  robotiq_85_left_finger_link-ch.txt  robotiq_85_left_finger_tip_link-ch.txt  robotiq_85_left_inner_knuckle_link-ch.txt  robotiq_85_left_knuckle_link-ch.txt  robotiq_85_right_finger_link-ch.txt  robotiq_85_right_finger_tip_link-ch.txt  robotiq_85_right_inner_knuckle_link-ch.txt  robotiq_85_right_knuckle_link-ch.txt  robotiq_base-ch.txt  shoulder_link-ch.txt  spherical_wrist_1_link-ch.txt  spherical_wrist_2_link-ch.txt
etc/ForceSensorCalibration/: kinova_bota_gena_gripper_2f140.yaml
meshes/: DS4_adapter.STL  adapter.STL  plate.STL  screw.STL
meshes/BFT_KG3_IND2_SW/: mounting.dae
meshes/force_sensor/: adapter.STL
rsdf/kinova_default/: kinova_linkA7.rsdf
scripts/: generate_convex.sh
src/: CMakeLists.txt  KinovaRobotModule.h  KinovaRobotModule.in.cpp  config.in.h  kinova.cpp  kinova.h  module.cpp
tests/: CMakeLists.txt  loader.in.cpp
xacro/: BFT_KG3_IND2_SW.urdf.xacro  gen3.in.xacro  gen3_bota.in.xacro  gen3_w_FT_sensor.in.xacro  gen3_w_FT_sensor.xacro  gen3_w_bota_FT_sensor.in.xacro
